2006-06-14  Andre Klapper  <a9016009@gmx.de>

	* data/evolution.desktop.in.in: fixing categories, bugzilla entry,
	adding bugzilla component and bugzilla version.
	Fixes bug #335410. Thanks to Vincent Fretin and Olav Vitters.

2006-06-14  Chenthill Palanisamy  <pchenthill@novell.com>
	
	* configure.in: Use libgnomeprint-2.2 >= 2.7.0.

2006-06-12  Harish Krishnaswamy  <kharish@novell.com>

	* NEWS: Release updates.
	* configure.in: Bump version. Evolution 2.7.3 release.

2006-06-12  simon.zheng  <simon.zheng@sun.com>

	Fix for #336453

	* acinclude.m4:
	* configure.in:
	Add SunLDAP library support - a variant of Netscape LDAP.

2006-06-02 Iain Buchanan <iaindb@netspace.net.au>

	* configure.in: Fix typo that caused experimental plugins
	to be skipped.

2006-05-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* widgets/misc/e-attachment-bar.c: (update):
	  Fix compilation by adding missing (

2006-05-22  Harish Krishnaswamy  <kharish@novell.com>

	* configure.in: Update intltool requirements.

2006-05-09  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Patch from Brian Pepple to achieve
	GNOME Goal for po/LINGUAS. Closes bug #337965.
	* po/LINGUAS: New file.

2006-05-02  Kjartan Maraas  <kmaraas@gnome.org>

	configure.in: Fix compilation with modern openldap releases.
	Partially fixes bug #325957. Patch from Sushuma Rai.

2006-04-28  Sven Herzberg  <herzi@gnome-de.org>

	reviewed by: Srinivasa Ragavan

	* shell/apps_evolution_shell.schemas.in.in: added boolean key for the
	maximized state of the window
	* shell/e-shell-window.c: added window state saving and updated window
	size saving to work as expected (fixes bug 243962)

2006-04-27  Tor Lillqvist  <tml@novell.com>

	* win32/libemiscwidgets.def: Add e_expander_get_type which now is
	needed when linking libevolution-widgets-a11y.

2006-04-25  Jeffrey Stedfast  <fejj@novell.com>

	* configure.in: Figure out auto-magically what the mozilla-nss
	pkg-config module name is.
